fixed clickable logo, we will change the img itself instead of changing the z-index property

--- a/web/css/master.css
+++ b/web/css/master.css
@@ -59,7 +59,7 @@
     width: 100%;
     background: -webkit-gradient(linear, left top, right bottom, from(rgba(0,0,0,0)), to(rgba(255,255,255,1))), url(../img/ville.jpg) 0 -20px no-repeat;
     opacity: .10;
-    z-index: 0;
+    z-index: -1;
 }
 
 
